tools/vendor/zerocopy/tests/ui-stable/transmute-ref-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 unsatisfied trait bound
   |                                 required by a bound introduced by this call
   |
help: the trait `IntoBytes` is not implemented for `Src`
  --> tests/ui-stable/transmute-ref-src-not-intobytes.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-stable/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: IntoBytes` is not satisfied
  --> tests/ui-stable/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `Src`
  --> tests/ui-stable/transmute-ref-src-not-intobytes.rs:18:1
   |
18 | struct Src(AU16);
   | ^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-stable/transmute-ref-src-not-intobytes.rs:21:33
   |
21 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
